# DataEngineering_Projects

./: README.md
cdc_kafka_postgresql/: README.md  commands.txt  data.json  debezium.json  decode_test.py  docker-compose.yml  list_topics.py  pipeline.drawio  read_from_kafka.py  schema.avsc  sql_commands.sql
document_streaming/: README.md  commands.txt  docker-compose-kafka-spark.yml  dockerfile  output.txt  transformer.py
document_streaming/client/: api_client.py
document_streaming/streamlit/: streamlitapp.py
event_driven_e2e/Project_1/: commands_project01.txt  connect_to_dbeaver.py
event_driven_e2e/Project_1/sample-project/: main.py  pyproject.toml
event_driven_e2e/Project_1/work_submission/: deliverable_01.py  deliverable_02_readme.txt  docker-compose.yml
event_driven_e2e/Project_2/: commands_project_2.txt
event_driven_e2e/Project_2/project2/: kafka_faust.py  pyproject.toml
order_app_kafka_python/: README.md  analytics.py  diagram.drawio  email.py  order_backend.py  shopping_analytics.py  shopping_email.py  shopping_order_backend.py  shopping_transaction.py  transaction.py  views.sql
rest-api-to-postgresql/: README.md  db_connection.py  db_crud.py  db_models.py  db_schemavalidation.py  get_data.py  requirements.txt
rest-api-to-postgresql/virtualenv/: pyvenv.cfg
stock_analysis/: KafkaConsumer.py  KafkaProducer.py  Readme.md  commands.txt
