[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["Joao Paulo Alvim <joaopaulonobregaalvim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faust = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
